# sputnik_offer_crm

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  db-schema.txt  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 049f51ffe618_add_offer_fields_to_students_table.py  41d6f1af8e1f_add_weekly_reports_table.py  4413e3441ce0_add_notification_log_table.py  61c117a4ebf4_add_stages_and_deadline_tables.py  62b06fe1e0eb_add_registration_domain_models_with_.py  a9147f941ebf_add_is_paused_field_to_students_table.py  add_student_status_enum.py  b8bbe441b1c4_migrate_student_progress_to_stages_table.py  c9f1b4a7d2f0_add_is_admin_to_mentors.py
docker/: entrypoint.sh
src/sputnik_offer_crm/: __init__.py  main.py
src/sputnik_offer_crm/bot/: __init__.py  bot.py  states.py
src/sputnik_offer_crm/config/: settings.py
src/sputnik_offer_crm/db/: __init__.py  session.py
src/sputnik_offer_crm/jobs/: __init__.py  notification_job.py
tests/: __init__.py  conftest.py
tests/fixtures/: db_fixtures.py
tests/integration/: test_mentor_deadline_bulk.py  test_mentor_deadline_service.py  test_mentor_progress_manual_stage.py  test_mentor_progress_service.py  test_mentor_service.py  test_mentor_service_extended.py  test_mentor_student_service.py  test_mentor_student_status_service.py  test_model_constraints.py  test_registration_service.py  test_registration_service_extended.py  test_student_service.py  test_weekly_report_service.py
tests/unit/: test_registration_handlers.py  test_registration_handlers_extended.py  test_timezone.py
(+57 files in other folders)
